[package]
name = "arduino_hyt939"
version = "0.1.0"
authors = ["MLackner <lacknersmichael@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
ufmt = "0.1.0"
ufmt_float = "0.1.0"
nb = "1.0.0"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "d17a441a667dd65e5a9be75b0e71d1beadf93e84"
# ^- Pin the dependency to a specific version.  You should use the latest
# commit hash from the avr-hal master branch.  You can find it here:
#
#    https://github.com/Rahix/avr-hal/commits/master

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
